# py-vault-secrets

./: README.md  import.csv.example  pyproject.toml  requirements.txt
.github/workflows/: release.yml
src/py_vault_secrets/: __init__.py  cli.py  config.py  vault.py
